Add zone working.
